feat: 项目初始化 — 源码、测试、E2E、文档、安全加固
- 78 个 Java 源文件（controller/service/mapper/entity/config/util）
- 151 个测试（Util 39 + Mapper 18 + Service 37 + Controller 43 + E2E 13）
- Playwright Edge E2E 测试框架（13 用例，5 条核心链路）
- 安全加固：API Key 迁至 .env 环境变量，移除硬编码密钥
- 项目整理：文档集中到 docs/，删除废弃脚本和重复文件
- 更新 .gitignore 排除运行时产物
- 更新 README 反映实际项目状态