@@ -1,362 +1,192 @@
-# AI-Native智能商城系统 🚀
+# AI-Native 智能商城
 
-> **2026年企业级AI原生商业系统 - Spring Boot 3.2 + JDK 21 + Spring AI + LangChain4j**
+> Spring Boot 3.2 + JDK 21 + LangChain4j + Vue 3 — AI 原生电商系统
 
 [![Java](https://img.shields.io/badge/Java-21-blue.svg)](https://openjdk.org/projects/jdk/21/)
 [![Spring Boot](https://img.shields.io/badge/Spring%20Boot-3.2.5-brightgreen.svg)](https://spring.io/projects/spring-boot)
-[![Spring AI](https://img.shields.io/badge/Spring%20AI-1.0.0--M6-orange.svg)](https://spring.io/projects/spring-ai)
 [![LangChain4j](https://img.shields.io/badge/LangChain4j-0.36.2-purple.svg)](https://docs.langchain4j.dev/)
-[![License](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)
+[![Vue](https://img.shields.io/badge/Vue-3.4-42b883.svg)](https://vuejs.org/)
+[![Tests](https://img.shields.io/badge/tests-151%20passed-success.svg)]()
 
 ---
 
-## 📖 项目简介
+## 项目简介
 
-**AI-Native Smart Mall** 是一套深度融合Java生态稳定性与AI技术智能化的企业级商城系统，实现"业务+AI双引擎"驱动。
+AI-Native Smart Mall 是一套融合 Java + AI 的企业级商城系统，涵盖用户端、管理后台、AI 智能客服。
 
-### ✨ 核心特性
+**核心功能**
 
-- 🤖 **AI深度集成**: Spring AI + LangChain4j双引擎，RAG检索增强生成
-- ⚡ **高并发稳定**: JDK 21虚拟线程，1200 QPS实测
-- 💬 **智能客服**: 基于向量知识库的语义问答，流式响应 < 1.5秒
-- 🛍️ **商品运营AI**: 自动生成SEO标题、商品描述、评论情感分析
-- 🔒 **安全可靠**: 数据脱敏、API鉴权、限流防刷、熔断降级
-- 🏗️ **微服务治理**: Nacos + Sentinel + Gateway全链路管控
-
----
-
-## 📚 快速导航
-
-| 文档 | 说明 | 链接 |
-|------|------|------|
-| 📐 **架构文档** | 完整技术架构设计 | [ARCHITECTURE.md](ARCHITECTURE.md) |
-| 🚀 **快速启动** | 5分钟部署指南 | [QUICK_START.md](QUICK_START.md) |
-| ✅ **验收报告** | 甲方验收标准对照 | [ACCEPTANCE_REPORT.md](ACCEPTANCE_REPORT.md) |
-| 📊 **项目总结** | 交付物清单与技术亮点 | [PROJECT_SUMMARY.md](PROJECT_SUMMARY.md) |
+- 用户注册/登录、商品浏览/搜索/分类、购物车、下单支付
+- 钱包充值/扣款/退款、订单全生命周期管理
+- AI 智能客服（RAG 向量检索 + LLM 流式响应）
+- AI 商品运营（SEO 标题生成、商品描述、评论情感分析）
+- 数据统计看板、知识库文档管理
 
 ---
 
-## 🏗️ 技术架构
-
-### 后端技术栈
-
-```yaml
-核心基座:
-  - JDK 21 LTS (虚拟线程)
-  - Spring Boot 3.2.5
-  - Spring Cloud 2023.0.1
-  - Spring Cloud Alibaba 2023.0.1.0
-
-AI赋能层:
-  - Spring AI 1.0.0-M6
-  - LangChain4j 0.36.2
-  - Redis 7.0+ Vector Search
-  - all-MiniLM-L6-v2 (嵌入模型)
-  - 通义千问 / DeepSeek (大模型)
-
-微服务治理:
-  - Nacos (注册配置中心)
-  - Sentinel (流量防护)
-  - Gateway (API网关)
-  - OpenFeign (服务调用)
-  - RocketMQ (消息队列)
-  - Seata (分布式事务)
-  - SkyWalking (链路追踪)
-
-数据存储:
-  - MySQL 8.0+ (关系型数据库)
-  - Redis 7.0+ (向量数据库)
-  - Elasticsearch 8.x (全文检索)
-  - Redisson 3.37.0 (分布式锁)
-```
-
-### 架构图
-
-```
-┌─────────────────────────────────────────┐
-│         前端层 (Vue 3 + Uniapp)          │
-└──────────────┬──────────────────────────┘
-               │ HTTPS / SSE
-┌──────────────▼──────────────────────────┐
-│   Gateway (鉴权+限流+AI提示词过滤)       │
-└──────────────┬──────────────────────────┘
-               │
-┌──────────────▼──────────────────────────┐
-│      微服务层 (Spring Cloud Alibaba)     │
-│  ┌──────────────────────────────────┐   │
-│  │  AI能力层 (Spring AI + LC4j)     │   │
-│  │  - 智能客服 (RAG)                │   │
-│  │  - 商品运营 (SEO/描述/情感分析)   │   │
-│  └──────────────────────────────────┘   │
-└──────────────┬──────────────────────────┘
-               │
-┌──────────────▼──────────────────────────┐
-│   数据层 (MySQL + Redis Vector + ES)    │
-└─────────────────────────────────────────┘
-```
-
----
-
-## 🚀 快速开始
+## 快速开始
 
 ### 前置要求
 
-- ✅ JDK 21 LTS
-- ✅ Maven 3.8+
-- ✅ Docker & Docker Compose
-- ✅ 通义千问API Key ([申请地址](https://dashscope.aliyun.com/))
+- JDK 21、Maven 3.8+
+- Docker（可选，用于启动中间件）
+- 通义千问 API Key（[申请地址](https://dashscope.aliyun.com/)）
 
-### 1️⃣ 克隆项目
-
-```bash
-git clone https://github.com/your-repo/ai-native-mall.git
-cd ai-native-mall
-```
-
-### 2️⃣ 启动依赖服务
+### 1. 配置环境变量
 
 ```bash
-docker-compose up -d
+cp .env.example .env
+# 编辑 .env 填入真实的数据库密码和 AI API Key
 ```
 
-### 3️⃣ 配置API Key
-
-编辑 `src/main/resources/application.yml`:
-
-```yaml
-spring:
-  ai:
-    openai:
-      api-key: sk-your-actual-api-key  # 替换为你的Key
-```
-
-### 4️⃣ 编译运行
+### 2. 启动中间件（可选）
 
 ```bash
-# 编译
-mvn clean package -DskipTests
-
-# 运行
-java --enable-preview -jar target/ai-native-mall-1.0.0.jar
+docker-compose up -d   # MySQL + Redis + ES + Nacos + RocketMQ
 ```
 
-### 5️⃣ 验证启动
+### 3. 启动后端
 
 ```bash
-curl http://localhost:8080/actuator/health
-# 返回: {"status":"UP"}
+./mvnw spring-boot:run
+# 后端运行在 http://localhost:8081
 ```
 
-📖 **详细步骤**: 查看 [QUICK_START.md](QUICK_START.md)
+### 4. 启动前端
+
+```bash
+cd web-client
+npm install
+npm run dev
+# 用户端运行在 http://localhost:3001
+```
+
+### 5. 验证
+
+```bash
+curl http://localhost:8081/actuator/health
+# {"status":"UP"}
+```
 
 ---
 
-## 📡 API接口示例
+## 技术栈
 
-### 智能客服问答
-
-```bash
-curl -X POST http://localhost:8080/api/ai/customer-service/ask \
-  -H "Content-Type: application/json" \
-  -d '{
-    "userId": "user_123",
-    "question": "iPhone 15 Pro有什么特点？",
-    "sessionId": "session_456",
-    "apiKey": "sk-test-key"
-  }'
-```
-
-**响应**:
-```json
-{
-  "success": true,
-  "answer": "iPhone 15 Pro采用A17 Pro芯片，性能强劲...",
-  "sessionId": "session_456"
-}
-```
-
-### 生成SEO标题
-
-```bash
-curl -X POST http://localhost:8080/api/ai/product/seo-title \
-  -H "Content-Type: application/json" \
-  -d '{
-    "productName": "iPhone 15 Pro",
-    "category": "手机通讯",
-    "features": "A17 Pro芯片,钛金属,4800万像素"
-  }'
-```
-
-**响应**:
-```json
-{
-  "success": true,
-  "seoTitle": "Apple iPhone 15 Pro 5G手机 A17 Pro芯片 钛金属边框 4800万主摄"
-}
-```
-
-📖 **完整API文档**: 查看 [ARCHITECTURE.md - 第五章](ARCHITECTURE.md#五api接口文档)
+| 层级 | 技术 |
+|------|------|
+| 后端框架 | Spring Boot 3.2.5 + JDK 21 |
+| ORM | MyBatis Plus 3.5.7 |
+| AI | LangChain4j 0.36.2 + 通义千问 / DeepSeek |
+| 向量检索 | Redis Stack 7.x + all-MiniLM-L6-v2 |
+| 搜索引擎 | Elasticsearch 8.x |
+| 注册配置 | Nacos 2.x |
+| 流量防护 | Sentinel |
+| 消息队列 | RocketMQ 5.x |
+| 前端 | Vue 3.4 + Element Plus + Pinia |
 
 ---
 
-## 📂 项目结构
+## 项目结构
 
 ```
 ai-native-mall/
 ├── src/main/java/org/example/java_ai/
-│   ├── JavaAiApplication.java              # 主启动类
-│   ├── config/
-│   │   ├── AiCoreConfig.java               # AI核心配置
-│   │   ├── VirtualThreadConfig.java        # 虚拟线程配置
-│   │   ├── AiSecurityConfig.java           # AI安全配置
-│   │   └── MicroserviceConfig.java         # 微服务配置
-│   ├── service/ai/
-│   │   ├── SmartCustomerService.java       # 智能客服
-│   │   └── ProductOperationService.java    # 商品运营AI
-│   ├── controller/
-│   │   └── AiController.java               # AI接口控制器
-│   └── util/
-│       └── DataMaskingUtil.java            # 数据脱敏工具
+│   ├── controller/          API 控制器（用户端 + 管理端）
+│   ├── service/             业务接口
+│   │   ├── impl/            业务实现
+│   │   └── ai/              AI 服务（客服、商品运营、语义搜索）
+│   ├── mapper/              MyBatis Mapper
+│   ├── entity/              实体类
+│   ├── config/              配置类
+│   ├── common/              通用模型（Result、PageResult）
+│   ├── exception/           异常处理
+│   └── util/                工具类
+├── src/test/java/.../       151 个测试（单元 + 集成 + 接口）
 ├── src/main/resources/
-│   ├── application.yml                     # 应用配置
-│   └── application.properties
-├── ARCHITECTURE.md                         # 架构文档
-├── QUICK_START.md                          # 快速启动
-├── ACCEPTANCE_REPORT.md                    # 验收报告
-├── PROJECT_SUMMARY.md                      # 项目总结
-├── pom.xml                                 # Maven配置
-└── README.md                               # 本文件
+│   ├── application.yml      应用配置
+│   ├── schema.sql           建库脚本
+│   └── sql/                 数据库迁移脚本
+├── web-client/              Vue 3 用户端（含 E2E 测试）
+├── web-admin/               Vue 3 管理后台
+├── docs/                    项目文档
+├── docker-compose.yml       中间件编排
+├── .env.example             环境变量模板
+└── pom.xml                  Maven 构建
 ```
 
 ---
 
-## 📊 性能指标
-
-| 指标 | 目标值 | 实测值 |
-|------|--------|--------|
-| AI对话首字返回 | < 1.5秒 | 1.3秒 |
-| 并发支持 (QPS) | 1000 | 1200 |
-| 向量检索耗时 | < 50ms | 35ms |
-| API平均响应 | < 200ms | 150ms |
-| 系统可用性 | 99.9% | 99.95% |
-
-📖 **详细压测报告**: 查看 [ACCEPTANCE_REPORT.md - 压力测试](ACCEPTANCE_REPORT.md#-压力测试报告)
-
----
-
-## 🔒 安全特性
-
-✅ **数据脱敏**: 手机号、身份证、姓名等隐私数据自动脱敏  
-✅ **API鉴权**: API Key验证防止未授权访问  
-✅ **限流防刷**: 单用户QPS=10，日调用上限10000次  
-✅ **敏感词过滤**: 防止提示词注入攻击  
-✅ **熔断降级**: Sentinel保护AI接口超时不影响主链路  
-
----
-
-## 🧪 测试
+## 测试
 
 ```bash
-# 单元测试
-mvn test
+# 全部单元测试 + 接口测试（151 个）
+./mvnw test
 
-# 集成测试
-mvn verify
-
-# 代码覆盖率
-mvn jacoco:report
+# E2E 浏览器测试（需要先启动后端和前端）
+cd web-client
+npm run test:e2e
 ```
+
+**测试分层**
+
+| 层级 | 数量 | 技术 |
+|------|:--:|------|
+| Util | 39 | JUnit 5 |
+| Mapper | 18 | H2 + MyBatis Plus Test |
+| Service | 37 | Mockito |
+| Controller | 43 | MockMvc |
+| E2E | 13 | Playwright + Edge |
+| **合计** | **151** | |
 
 ---
 
-## 📦 部署
+## API 示例
 
-### Docker部署
+### 商品列表
 
 ```bash
-# 构建镜像
-docker build -t ai-native-mall:1.0.0 .
-
-# 运行容器
-docker run -d -p 8080:8080 ai-native-mall:1.0.0
+curl http://localhost:8081/api/product/list
 ```
 
-### K8s部署
+### 用户登录
 
 ```bash
-kubectl apply -f k8s/deployment.yaml
-kubectl apply -f k8s/service.yaml
+curl -X POST http://localhost:8081/api/user/login \
+  -H "Content-Type: application/json" \
+  -d '{"username":"admin","password":"admin123"}'
 ```
 
-📖 **详细部署指南**: 查看 [ARCHITECTURE.md - 第六章](ARCHITECTURE.md#六部署指南)
+### AI 智能客服
+
+```bash
+curl -X POST http://localhost:8081/api/ai/customer-service/ask \
+  -H "Content-Type: application/json" \
+  -d '{"question":"iPhone 15 多少钱？","userId":"1","sessionId":"test"}'
+```
 
 ---
 
-## 🛠️ 开发工具推荐
+## 安全
 
-- **IDE**: IntelliJ IDEA 2024+ (推荐)
-- **API测试**: Postman / Apifox
-- **数据库管理**: DataGrip / Navicat
-- **Redis管理**: Another Redis Desktop Manager
-- **监控**: SkyWalking Dashboard / Grafana
-
----
-
-## 🤝 贡献指南
-
-欢迎提交Issue和Pull Request！
-
-1. Fork 本仓库
-2. 创建特性分支 (`git checkout -b feature/AmazingFeature`)
-3. 提交更改 (`git commit -m 'Add some AmazingFeature'`)
-4. 推送到分支 (`git push origin feature/AmazingFeature`)
-5. 开启Pull Request
+- API Key 通过 `.env` 环境变量管理，不硬编码在源码中
+- `.env` 已加入 `.gitignore`，不会提交到版本控制
+- 用户密码 BCrypt 加密存储
+- 隐私数据（手机号、身份证等）自动脱敏
+- Sentinel 熔断降级保护 AI 接口
+- JWT Token 鉴权 + 接口限流
 
 ---
 
-## 📄 开源协议
+## 文档
 
-本项目采用 MIT 协议 - 查看 [LICENSE](LICENSE) 文件了解详情
-
----
-
-## 👥 团队介绍
-
-**AI-Native Mall Team**
-
-- 技术负责人: [待填写]
-- 后端开发: [待填写]
-- 前端开发: [待填写]
-- 测试工程师: [待填写]
+| 文档 | 说明 |
+|------|------|
+| [架构设计](docs/ARCHITECTURE.md) | 完整技术架构、AI 能力详解 |
+| [快速启动](docs/QUICK_START.md) | 详细部署指南 |
+| [测试计划](docs/TESTING_PLAN.md) | 248 条用例、测试策略 |
+| [验收报告](docs/ACCEPTANCE_REPORT.md) | 验收标准对照 |
+| [项目总结](docs/PROJECT_SUMMARY.md) | 交付物清单 |
 
 ---
 
-## 📞 联系方式
-
-- 📧 Email: [待填写]
-- 💬 微信群: [待填写]
-- 🐛 Issue: [GitHub Issues](https://github.com/your-repo/ai-native-mall/issues)
-
----
-
-## 🌟 Star History
-
-如果这个项目对你有帮助，请给我们一个⭐ Star！
-
----
-
-## 🙏 致谢
-
-感谢以下开源项目：
-
-- [Spring Boot](https://spring.io/projects/spring-boot)
-- [Spring AI](https://spring.io/projects/spring-ai)
-- [LangChain4j](https://docs.langchain4j.dev/)
-- [Alibaba Nacos](https://nacos.io/)
-- [Sentinel](https://sentinelguard.io/)
-
----
-
-**Made with ❤️ by AI-Native Mall Team**
-
-**版本**: v1.0.0 | **更新时间**: 2026-04-09
+**版本**: v1.0.0 | **更新**: 2026-05-27
